--- a/startbootstrap-landing-page-gh-pages/index.html
+++ b/startbootstrap-landing-page-gh-pages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Intend to Lend</title>
+    <title>Landing Page - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
